--- a/app/src/main/res/layout/content_assignation.xml
+++ b/app/src/main/res/layout/content_assignation.xml
@@ -8,7 +8,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/assignation_root">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/assignation_bill_lines"
@@ -22,6 +23,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_bill_line_assignation"/>
+            tools:listitem="@layout/item_bill_line_assignation" />
     </android.support.constraint.ConstraintLayout>
 </layout>
