--- a/app/src/main/res/layout/item_bill_line_assignation_choosing.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation_choosing.xml
@@ -12,7 +12,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <CheckBox
             android:id="@+id/selected_product_checkbox"
