Implemented assignation to multiple products

--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -16,7 +16,21 @@
         android:paddingLeft="@dimen/list_item_horizontal_padding"
         android:paddingRight="@dimen/list_item_horizontal_padding"
         android:paddingTop="@dimen/list_item_vertical_padding"
-        android:paddingBottom="@dimen/list_item_vertical_padding">
+        android:paddingBottom="@dimen/list_item_vertical_padding"
+        android:animateLayoutChanges="true">
+
+        <CheckBox
+            android:id="@+id/choosing_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/bill_line_name_text"
@@ -24,10 +38,12 @@
             android:layout_height="wrap_content"
             android:text="@{item.name}"
             tools:text="Producto A"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/list_title_text_size"/>
+            android:textSize="@dimen/list_title_text_size"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox" />
 
         <TextView
             android:id="@+id/bill_line_assignations_text"
@@ -36,12 +52,14 @@
             android:layout_marginTop="0dp"
             android:text="@{item.getAssignedPeopleAsString(context, billLineAssignationsText)}"
             tools:text="Todavía sin asignar"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
             android:textSize="@dimen/list_caption_text_size"
             app:layout_constraintRight_toLeftOf="@+id/bill_line_ok"
             android:layout_marginRight="@dimen/list_item_horizontal_padding"
-            android:layout_marginEnd="@dimen/list_item_horizontal_padding" />
+            android:layout_marginEnd="@dimen/list_item_horizontal_padding"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/bill_line_price_text"
@@ -50,9 +68,11 @@
             android:layout_marginTop="0dp"
             android:text="@{utils.getPriceAsString(item.price)}"
             tools:text="2,37 €"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_line_assignations_text"
-            android:textSize="@dimen/list_caption_text_size"/>
+            android:textSize="@dimen/list_caption_text_size"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <ImageView
             android:id="@+id/bill_line_ok"
@@ -62,7 +82,6 @@
             app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
             android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
-
             app:layout_constraintRight_toRightOf="parent"
             android:tint="@color/md_green_500"
             android:visibility="@{item.persons.isEmpty()? View.INVISIBLE : View.VISIBLE}"
