--- a/app/src/main/res/layout/activity_assignation.xml
+++ b/app/src/main/res/layout/activity_assignation.xml
@@ -18,7 +18,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                android:animateLayoutChanges="true">
+
+                <include android:id="@+id/assignation_bar_content"
+                    layout="@layout/layout_app_bar_choosing"
+                    android:visibility="gone"/>
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
