--- a/app/src/main/res/layout/item_bill_main_activity.xml
+++ b/app/src/main/res/layout/item_bill_main_activity.xml
@@ -17,7 +17,21 @@
         android:paddingLeft="@dimen/list_item_horizontal_padding"
         android:paddingRight="@dimen/list_item_horizontal_padding"
         android:paddingTop="@dimen/list_item_vertical_padding"
-        android:paddingBottom="@dimen/list_item_vertical_padding">
+        android:paddingBottom="@dimen/list_item_vertical_padding"
+        android:animateLayoutChanges="true">
+
+        <CheckBox
+            android:id="@+id/choosing_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/bill_name_text"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/bill_date"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/bill_name_text"
@@ -25,10 +39,13 @@
             android:layout_height="wrap_content"
             android:text="@{item.name}"
             tools:text="Cuenta del 17/10/1996"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/list_title_text_size"/>
+            android:textSize="@dimen/list_title_text_size"
+            android:layout_marginTop="0dp"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/bill_price_text"
@@ -36,9 +53,11 @@
             android:layout_height="wrap_content"
             android:text="@{utils.getPriceAsStringWithTip(context, item.priceWithoutTip, item.tipPercent)}"
             tools:text="20,07€ + 3,00€ de propina"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_name_text"
-            android:textSize="@dimen/list_caption_text_size"/>
+            android:textSize="@dimen/list_caption_text_size"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/bill_date"
@@ -46,9 +65,11 @@
             android:layout_height="wrap_content"
             android:text="@{utils.getBeautifulDate(context, item.date)}"
             tools:text="Lunes, 17 de octubre de 1996 a las 22:00"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
-            android:textSize="@dimen/list_caption_text_size"/>
+            android:textSize="@dimen/list_caption_text_size"
+            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" />
         
         <au.com.dardle.widget.BadgeLayout
             android:layout_width="wrap_content"
