--- a/app/src/main/res/menu/menu_app_bar_activity_assignation_choosing.xml
+++ b/app/src/main/res/menu/menu_app_bar_activity_assignation_choosing.xml
@@ -5,4 +5,9 @@
         android:id="@+id/action_assign"
         android:title="@string/app_bar_button_assign"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_clear_assignations"
+        android:title="@string/app_bar_button_clear_assignations"
+        app:showAsAction="never"
+        />
 </menu>
