--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -10,83 +10,90 @@
         <variable name="item" type="es.soutullo.blitter.model.vo.bill.BillLine" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/list_item_horizontal_padding"
-        android:paddingRight="@dimen/list_item_horizontal_padding"
-        android:paddingTop="@dimen/list_item_vertical_padding"
-        android:paddingBottom="@dimen/list_item_vertical_padding"
-        android:animateLayoutChanges="true">
+        android:background="@color/md_white_1000">
 
-        <CheckBox
-            android:id="@+id/choosing_checkbox"
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone"/>
+            android:paddingLeft="@dimen/list_item_horizontal_padding"
+            android:paddingRight="@dimen/list_item_horizontal_padding"
+            android:paddingTop="@dimen/list_item_vertical_padding"
+            android:paddingBottom="@dimen/list_item_vertical_padding"
+            android:animateLayoutChanges="true"
+            android:background="?attr/selectableItemBackground">
 
-        <TextView
-            android:id="@+id/bill_line_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{item.name}"
-            tools:text="Producto A"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/list_title_text_size"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox" />
+            <CheckBox
+                android:id="@+id/choosing_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginStart="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/bill_line_assignations_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:text="@{item.getAssignedPeopleAsString(context, billLineAssignationsText)}"
-            tools:text="Todavía sin asignar"
-            app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
-            android:textSize="@dimen/list_caption_text_size"
-            app:layout_constraintRight_toLeftOf="@+id/bill_line_ok"
-            android:layout_marginRight="@dimen/list_item_horizontal_padding"
-            android:layout_marginEnd="@dimen/list_item_horizontal_padding"
-            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:maxLines="1"/>
+            <TextView
+                android:id="@+id/bill_line_name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{item.name}"
+                tools:text="Producto A"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/list_title_text_size"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox" />
 
-        <TextView
-            android:id="@+id/bill_line_price_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:text="@{utils.getPriceAsString(item.price)}"
-            tools:text="2,37 €"
-            app:layout_constraintTop_toBottomOf="@+id/bill_line_assignations_text"
-            android:textSize="@dimen/list_caption_text_size"
-            app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp" />
+            <TextView
+                android:id="@+id/bill_line_assignations_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:text="@{item.getAssignedPeopleAsString(context, billLineAssignationsText)}"
+                tools:text="Todavía sin asignar"
+                app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
+                android:textSize="@dimen/list_caption_text_size"
+                app:layout_constraintRight_toLeftOf="@+id/bill_line_ok"
+                android:layout_marginRight="@dimen/list_item_horizontal_padding"
+                android:layout_marginEnd="@dimen/list_item_horizontal_padding"
+                app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:maxLines="1"/>
 
-        <ImageView
-            android:id="@+id/bill_line_ok"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/ic_done_white_24dp"
-            app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
-            app:layout_constraintRight_toRightOf="parent"
-            android:tint="@color/md_green_500"
-            android:visibility="@{item.persons.isEmpty()? View.INVISIBLE : View.VISIBLE}"
-            android:contentDescription="@string/content_description_assignation_green_tick"/>
+            <TextView
+                android:id="@+id/bill_line_price_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:text="@{utils.getPriceAsString(item.price)}"
+                tools:text="2,37 €"
+                app:layout_constraintTop_toBottomOf="@+id/bill_line_assignations_text"
+                android:textSize="@dimen/list_caption_text_size"
+                app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp" />
 
-    </android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/bill_line_ok"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:srcCompat="@drawable/ic_done_white_24dp"
+                app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
+                android:layout_marginTop="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
+                app:layout_constraintRight_toRightOf="parent"
+                android:tint="@color/md_green_500"
+                android:visibility="@{item.persons.isEmpty()? View.INVISIBLE : View.VISIBLE}"
+                android:contentDescription="@string/content_description_assignation_green_tick"/>
+
+        </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
 </layout>
