--- a/app/src/main/res/layout/layout_app_bar_choosing.xml
+++ b/app/src/main/res/layout/layout_app_bar_choosing.xml
@@ -20,7 +20,9 @@
                 android:id="@+id/select_all_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:buttonTint="@color/colorOverPrimary" />
+                app:buttonTint="@color/colorOverPrimary"
+                android:layout_marginBottom="-4dp"
+                android:layout_marginTop="4dp"/>
 
             <TextView
                 android:id="@+id/textView"
