--- a/app/src/main/res/layout/activity_bill_person_trace.xml
+++ b/app/src/main/res/layout/activity_bill_person_trace.xml
@@ -12,6 +12,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/md_white_1000"
         tools:context="es.soutullo.blitter.view.activity.BillPersonTraceActivity">
 
         <include layout="@layout/item_person_final_result"
@@ -31,8 +32,8 @@
             android:text="@string/title_user_products"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.Design.Hint"
-            android:textSize="@dimen/section_title_size"
             android:textColor="@color/colorAccent"
+            android:textSize="16sp"
             style="?android:attr/listSeparatorTextViewStyle"
             app:layout_constraintTop_toBottomOf="@+id/include"
             android:layout_marginRight="0dp"
