--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -4,40 +4,45 @@
 
     <PreferenceCategory android:title="@string/preference_category_title_settings">
         <com.pavelsikun.seekbarpreference.SeekBarPreference
-            android:key="preference_default_tip_percent"
-            android:defaultValue="0"
+            android:key="@string/preference_key_default_tip_percent"
+            android:defaultValue="10"
             sample:msbp_minValue="0"
             sample:msbp_maxValue="@integer/max_tip_percent"
             sample:msbp_interval="1"
             sample:msbp_measurementUnit="%"
-            sample:msbp_dialogEnabled="true"
-
-            android:title="@string/preference_title_default_tip"/>
+            sample:msbp_dialogEnabled="false"
+            android:title="@string/preference_title_default_tip"
+            android:summary="@string/preference_summary_default_tip"/>
 
         <Preference
-            android:key="preference_remove_ads"
-            android:title="Eliminar anuncios"
-            android:summary="¡No más publicidad!"/>
+            android:key="@string/preference_key_delete_all_bills"
+            android:title="@string/preference_title_delete_bills"
+            android:summary="@string/preference_summary_delete_bills"/>
+
+        <Preference
+            android:key="@string/preference_key_remove_ads"
+            android:title="@string/preference_title_remove_ads"
+            android:summary="@string/preference_title_remove_ads"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preference_category_title_about">
         <Preference
-            android:key="preference_developer"
+            android:key="@string/preference_key_developer"
             android:title="@string/preference_title_developer"
-            android:summary="@string/preference_summary_developer" />
+            android:summary="@string/preference_summary_developer"/>
 
         <Preference
-            android:key="preference_contact"
+            android:key="@string/preference_key_contact"
             android:title="@string/preference_title_contact"
-            android:summary="@string/preference_summary_contact" />
+            android:summary="@string/developer_email" />
 
         <Preference
-            android:key="preference_version"
+            android:key="@string/preference_key_version"
             android:title="@string/preference_title_version"
             android:summary="@string/app_version_name" />
 
         <Preference
-            android:key="preference_privacy_policy"
+            android:key="@string/preference_key_privacy_policy"
             android:title="@string/preference_title_privacy_policy"
             android:summary="@string/preference_summary_privacy_policy" />
     </PreferenceCategory>
