--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" >
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
                     <include android:id="@+id/action_bar_content"
                         layout="@layout/layout_app_bar_choosing"
                         android:visibility="gone"/>
+
+                    <EditText
+                        android:id="@+id/app_bar_search"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/md_black_1000"
+                        android:hint="@string/app_bar_search_hint"
+                        android:textColorHint="@color/md_blue_grey_500"
+                        android:visibility="gone"
+                        android:background="@android:color/transparent"/>
 
                 </android.support.v7.widget.Toolbar>
 
