--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -56,6 +56,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
+                android:text="@{item.getAssignedPeopleAsString(context)}"
                 tools:text="Todavía sin asignar"
                 app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
                 android:textSize="@dimen/list_caption_text_size"
@@ -65,7 +66,8 @@
                 app:layout_constraintLeft_toRightOf="@+id/choosing_checkbox"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:ellipsize="end"/>
 
             <TextView
                 android:id="@+id/bill_line_price_text"
