--- a/app/src/main/res/layout/item_bill_main_activity.xml
+++ b/app/src/main/res/layout/item_bill_main_activity.xml
@@ -77,21 +77,18 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp" />
 
-            <au.com.dardle.widget.BadgeLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="@{item.status != EBillStatus.COMPLETED? View.VISIBLE: View.GONE}"
-                app:badgeBackground="@color/md_red_600"
-                app:badgeTextColor="@android:color/white"
-                app:spacing="8dp"
+                app:layout_constraintTop_toTopOf="@id/bill_name_text"
+                app:layout_constraintBottom_toBottomOf="@id/bill_name_text"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <au.com.dardle.widget.BadgeItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/badge_bill_status_not_completed"/>
-            </au.com.dardle.widget.BadgeLayout>
+                android:visibility="@{item.status != EBillStatus.COMPLETED? View.VISIBLE: View.GONE}"
+                android:textColor="@color/md_white_1000"
+                android:background="@drawable/uncompleted_badge_background"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:text="@string/badge_bill_status_not_completed"/>
 
         </android.support.constraint.ConstraintLayout>
     </FrameLayout>
