--- a/app/src/main/res/layout/activity_manual_transcription.xml
+++ b/app/src/main/res/layout/activity_manual_transcription.xml
@@ -54,7 +54,6 @@
         android:hint="@string/hint_edit_text_product_price"
         android:padding="8dp"
         app:layout_constraintRight_toLeftOf="@+id/add_product"
-        android:layout_marginRight="8dp"
         app:layout_constraintLeft_toRightOf="@+id/product_field"
         android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -63,20 +62,17 @@
         app:layout_constraintTop_toTopOf="@+id/product_field"
         app:layout_constraintBottom_toBottomOf="@+id/product_field"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:imeOptions="actionDone"/>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="28dp"
         app:elevation="0dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/add_product"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="@id/product_price_field"
         app:layout_constraintBottom_toBottomOf="@+id/product_price_field"
-        app:layout_constraintTop_toTopOf="@+id/product_price_field"
-        app:layout_constraintDimensionRatio="w,1:1"
+        app:useCompatPadding="true"
         app:srcCompat="@drawable/ic_add_black_24dp"
         android:tint="@android:color/white"
         android:scaleType="center"
