Working camera preview without overlay

--- a/app/src/main/res/layout/activity_ocr_capture.xml
+++ b/app/src/main/res/layout/activity_ocr_capture.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.soutullo.blitter.view.activity.OcrCaptureActivity">
+    android:keepScreenOn="true">
 
-</android.support.constraint.ConstraintLayout>
+    <es.soutullo.blitter.view.component.CameraSourcePreview
+        android:id="@+id/camera_source_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
