--- a/app/src/main/res/layout/activity_ocr_capture.xml
+++ b/app/src/main/res/layout/activity_ocr_capture.xml
@@ -7,6 +7,13 @@
     <es.soutullo.blitter.view.component.CameraSourcePreview
         android:id="@+id/camera_source_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+        <es.soutullo.blitter.view.component.GraphicOverlay
+            android:id="@+id/graphic_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </es.soutullo.blitter.view.component.CameraSourcePreview>
 
 </LinearLayout>
