--- a/app/src/main/res/menu/menu_fab_main_activity.xml
+++ b/app/src/main/res/menu/menu_fab_main_activity.xml
@@ -5,11 +5,11 @@
         android:title="@string/main_fab_manually"
         android:icon="@drawable/ic_receipt_black_24dp"
         android:orderInCategory="1"/>
-    <item
-        android:id="@+id/fab_mini_gallery"
-        android:title="@string/main_fab_gallery"
-        android:icon="@drawable/ic_photo_library_black_24dp"
-        android:orderInCategory="2"/>
+    <!--<item-->
+        <!--android:id="@+id/fab_mini_gallery"-->
+        <!--android:title="@string/main_fab_gallery"-->
+        <!--android:icon="@drawable/ic_photo_library_black_24dp"-->
+        <!--android:orderInCategory="2"/>-->
     <item
         android:id="@+id/fab_mini_camera"
         android:title="@string/main_fab_camera"
