--- a/app/src/main/res/layout/item_bill_main_activity.xml
+++ b/app/src/main/res/layout/item_bill_main_activity.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/bill_price_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{utils.getPriceAsStringWithTip(context, item.priceWithoutTip, item.tipPercent)}"
+                android:text="@{utils.getPriceAsStringWithTip(context, item.subtotal + item.tax, item.tipPercent)}"
                 tools:text="20,07€ + 3,00€ de propina"
                 app:layout_constraintTop_toBottomOf="@+id/bill_name_text"
                 android:textSize="@dimen/list_caption_text_size"
