--- a/app/src/main/res/menu/menu_app_bar_final_result.xml
+++ b/app/src/main/res/menu/menu_app_bar_final_result.xml
@@ -9,6 +9,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share_white_24dp"
+        android:title="@string/action_activity_final_result_share"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_delete_forever_over_primary_24dp"
         android:title="@string/action_activity_final_result_delete"
