--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -32,6 +32,11 @@
             android:summary="@string/preference_summary_developer"/>
 
         <Preference
+            android:key="@string/preference_key_patreon"
+            android:title="@string/preference_title_patreon"
+            android:summary="@string/preference_summary_patreon" />
+
+        <Preference
             android:key="@string/preference_key_contact"
             android:title="@string/preference_title_contact"
             android:summary="@string/developer_email" />
